--- a/index.html
+++ b/index.html
@@ -7,15 +7,15 @@
     <meta name="author" content="">
     <title>Bootstrap E-Commerce Template- DIGI Shop mini</title>
     <!-- Bootstrap core CSS -->
-    <link href="~/asset/css/bootstrap.css" rel="stylesheet">
+    <link href="asset/css/bootstrap.css" rel="stylesheet">
     <!-- Fontawesome core CSS -->
-    <link href="~/asset/css/font-awesome.min.css" rel="stylesheet" />
+    <link href="asset/css/font-awesome.min.css" rel="stylesheet" />
     <!--GOOGLE FONT -->
     <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
     <!--Slide Show Css -->
-    <link href="~/asset/ItemSlider/css/main-style.css" rel="stylesheet" />
+    <link href="asset/ItemSlider/css/main-style.css" rel="stylesheet" />
     <!-- custom CSS here -->
-    <link href="~/asset/css/style.css" rel="stylesheet" />
+    <link href="asset/css/style.css" rel="stylesheet" />
 </head>
 <body>
     <nav class="navbar navbar-default" role="navigation">
@@ -82,55 +82,55 @@
                         <ul>
 
                             <li><a href="#">
-                                <img src="~/asset/ItemSlider/images/1.jpg" alt="img01"><h4>Boots</h4>
+                                <img src="asset/ItemSlider/images/1.jpg" alt="img01"><h4>Boots</h4>
                             </a></li>
                             <li><a href="#">
-                                <img src="~/asset/ItemSlider/images/2.jpg" alt="img02"><h4>Oxfords</h4>
+                                <img src="asset/ItemSlider/images/2.jpg" alt="img02"><h4>Oxfords</h4>
                             </a></li>
                             <li><a href="#">
-                                <img src="~/asset/ItemSlider/images/3.jpg" alt="img03"><h4>Loafers</h4>
+                                <img src="asset/ItemSlider/images/3.jpg" alt="img03"><h4>Loafers</h4>
                             </a></li>
                             <li><a href="#">
-                                <img src="~/asset/ItemSlider/images/4.jpg" alt="img04"><h4>Sneakers</h4>
-                            </a></li>
-                        </ul>
-                        <ul>
-                            <li><a href="#">
-                                <img src="~/asset/ItemSlider/images/5.jpg" alt="img05"><h4>Belts</h4>
-                            </a></li>
-                            <li><a href="#">
-                                <img src="~/asset/ItemSlider/images/6.jpg" alt="img06"><h4>Hats &amp; Caps</h4>
-                            </a></li>
-                            <li><a href="#">
-                                <img src="~/asset/ItemSlider/images/7.jpg" alt="img07"><h4>Sunglasses</h4>
-                            </a></li>
-                            <li><a href="#">
-                                <img src="~/asset/ItemSlider/images/8.jpg" alt="img08"><h4>Scarves</h4>
+                                <img src="asset/ItemSlider/images/4.jpg" alt="img04"><h4>Sneakers</h4>
                             </a></li>
                         </ul>
                         <ul>
                             <li><a href="#">
-                                <img src="~/asset/ItemSlider/images/9.jpg" alt="img09"><h4>Casual</h4>
+                                <img src="asset/ItemSlider/images/5.jpg" alt="img05"><h4>Belts</h4>
                             </a></li>
                             <li><a href="#">
-                                <img src="~/asset/ItemSlider/images/10.jpg" alt="img10"><h4>Luxury</h4>
+                                <img src="asset/ItemSlider/images/6.jpg" alt="img06"><h4>Hats &amp; Caps</h4>
                             </a></li>
                             <li><a href="#">
-                                <img src="~/asset/ItemSlider/images/11.jpg" alt="img11"><h4>Sport</h4>
+                                <img src="asset/ItemSlider/images/7.jpg" alt="img07"><h4>Sunglasses</h4>
+                            </a></li>
+                            <li><a href="#">
+                                <img src="asset/ItemSlider/images/8.jpg" alt="img08"><h4>Scarves</h4>
                             </a></li>
                         </ul>
                         <ul>
                             <li><a href="#">
-                                <img src="~/asset/ItemSlider/images/12.jpg" alt="img12"><h4>Carry-Ons</h4>
+                                <img src="asset/ItemSlider/images/9.jpg" alt="img09"><h4>Casual</h4>
                             </a></li>
                             <li><a href="#">
-                                <img src="~/asset/ItemSlider/images/13.jpg" alt="img13"><h4>Duffel Bags</h4>
+                                <img src="asset/ItemSlider/images/10.jpg" alt="img10"><h4>Luxury</h4>
                             </a></li>
                             <li><a href="#">
-                                <img src="~/asset/ItemSlider/images/14.jpg" alt="img14"><h4>Laptop Bags</h4>
+                                <img src="asset/ItemSlider/images/11.jpg" alt="img11"><h4>Sport</h4>
+                            </a></li>
+                        </ul>
+                        <ul>
+                            <li><a href="#">
+                                <img src="asset/ItemSlider/images/12.jpg" alt="img12"><h4>Carry-Ons</h4>
                             </a></li>
                             <li><a href="#">
-                                <img src="~/asset/ItemSlider/images/15.jpg" alt="img15"><h4>Briefcases</h4>
+                                <img src="asset/ItemSlider/images/13.jpg" alt="img13"><h4>Duffel Bags</h4>
+                            </a></li>
+                            <li><a href="#">
+                                <img src="asset/ItemSlider/images/14.jpg" alt="img14"><h4>Laptop Bags</h4>
+                            </a></li>
+                            <li><a href="#">
+                                <img src="asset/ItemSlider/images/15.jpg" alt="img15"><h4>Briefcases</h4>
                             </a></li>
                         </ul>
                         <nav>
@@ -152,7 +152,7 @@
                         30% off here
                     </div>
                     <div class="thumbnail product-box">
-                        <img src="~/asset/img/dummyimg.png" alt="" />
+                        <img src="asset/img/dummyimg.png" alt="" />
                         <div class="caption">
                             <h3><a href="#">Samsung Galaxy </a></h3>
                             <p><a href="#">Ptional dismiss button </a></p>
@@ -164,7 +164,7 @@
                         30% off here
                     </div>
                     <div class="thumbnail product-box">
-                        <img src="~/asset/img/dummyimg.png" alt="" />
+                        <img src="asset/img/dummyimg.png" alt="" />
                         <div class="caption">
                             <h3><a href="#">Samsung Galaxy </a></h3>
                             <p><a href="#">Ptional dismiss button </a></p>
@@ -303,7 +303,7 @@
                 <div class="row">
                     <div class="col-md-4 text-center col-sm-6 col-xs-6">
                         <div class="thumbnail product-box">
-                            <img src="~/asset/img/dummyimg.png" alt="" />
+                            <img src="asset/img/dummyimg.png" alt="" />
                             <div class="caption">
                                 <h3><a href="#">Samsung Galaxy </a></h3>
                                 <p>Price : <strong>$ 3,45,900</strong>  </p>
@@ -316,7 +316,7 @@
                     <!-- /.col -->
                     <div class="col-md-4 text-center col-sm-6 col-xs-6">
                         <div class="thumbnail product-box">
-                            <img src="~/asset/img/dummyimg.png" alt="" />
+                            <img src="asset/img/dummyimg.png" alt="" />
                             <div class="caption">
                                 <h3><a href="#">Samsung Galaxy </a></h3>
                                 <p>Price : <strong>$ 3,45,900</strong>  </p>
@@ -329,7 +329,7 @@
                     <!-- /.col -->
                     <div class="col-md-4 text-center col-sm-6 col-xs-6">
                         <div class="thumbnail product-box">
-                            <img src="~/asset/img/dummyimg.png" alt="" />
+                            <img src="asset/img/dummyimg.png" alt="" />
                             <div class="caption">
                                 <h3><a href="#">Samsung Galaxy </a></h3>
                                 <p>Price : <strong>$ 3,45,900</strong>  </p>
@@ -386,7 +386,7 @@
                 <div class="row">
                     <div class="col-md-4 text-center col-sm-6 col-xs-6">
                         <div class="thumbnail product-box">
-                            <img src="~/asset/img/dummyimg.png" alt="" />
+                            <img src="asset/img/dummyimg.png" alt="" />
                             <div class="caption">
                                 <h3><a href="#">Samsung Galaxy </a></h3>
                                 <p>Price : <strong>$ 3,45,900</strong>  </p>
@@ -402,7 +402,7 @@
                     <!-- /.col -->
                     <div class="col-md-4 text-center col-sm-6 col-xs-6">
                         <div class="thumbnail product-box">
-                            <img src="~/asset/img/dummyimg.png" alt="" />
+                            <img src="asset/img/dummyimg.png" alt="" />
                             <div class="caption">
                                 <h3><a href="#">Samsung Galaxy </a></h3>
                                 <p>Price : <strong>$ 3,45,900</strong>  </p>
@@ -415,7 +415,7 @@
                     <!-- /.col -->
                     <div class="col-md-4 text-center col-sm-6 col-xs-6">
                         <div class="thumbnail product-box">
-                            <img src="~/asset/img/dummyimg.png" alt="" />
+                            <img src="asset/img/dummyimg.png" alt="" />
                             <div class="caption">
                                 <h3><a href="#">Samsung Galaxy </a></h3>
                                 <p>Price : <strong>$ 3,45,900</strong>  </p>
@@ -555,12 +555,12 @@
     <!-- /.col -->
     <!--Footer end -->
     <!--Core JavaScript file  -->
-    <script src="~/asset/js/jquery-1.10.2.js"></script>
+    <script src="asset/js/jquery-1.10.2.js"></script>
     <!--bootstrap JavaScript file  -->
-    <script src="~/asset/js/bootstrap.js"></script>
+    <script src="asset/js/bootstrap.js"></script>
     <!--Slider JavaScript file  -->
-    <script src="~/asset/ItemSlider/js/modernizr.custom.63321.js"></script>
-    <script src="~/asset/ItemSlider/js/jquery.catslider.js"></script>
+    <script src="asset/ItemSlider/js/modernizr.custom.63321.js"></script>
+    <script src="asset/ItemSlider/js/jquery.catslider.js"></script>
     <script>
         $(function () {
 
