--- a/index.html
+++ b/index.html
@@ -16,6 +16,19 @@
     <link href="asset/ItemSlider/css/main-style.css" rel="stylesheet" />
     <!-- custom CSS here -->
     <link href="asset/css/style.css" rel="stylesheet" />
+<script src="https://cdn.onesignal.com/sdks/OneSignalSDK.js" async=""></script>
+<script>
+  window.OneSignal = window.OneSignal || [];
+  OneSignal.push(function() {
+    OneSignal.init({
+      appId: "6f025ee5-d2a7-4f02-a721-33125b471027",
+      safari_web_id: "",
+      notifyButton: {
+        enable: true,
+      },
+    });
+  });
+</script>
 </head>
 <body>
     <nav class="navbar navbar-default" role="navigation">
