--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <script type = "text/javascript" >
    var _portalId = "33167"; // Portal ANTSOMI Shopping 2 
    var _propId = "556301397"; // https://google.com.vn4 
-   var _ATM_TRACKING_ASSOCIATE_UTM=1	
+   var _ATM_TRACKING_ASSOCIATE_UTM=1;	
 (function() {
     var w = window;
     if (w.web_event) return;
