--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
 	
 <!-- CDP Web Insight script -->
 <script type = "text/javascript" >
-   var _portalId = "33167"; // Portal ANTSOMI Shopping 2 
-   var _propId = "556301397"; // https://google.com.vn4 
-   var _ATM_TRACKING_ASSOCIATE_UTM=0;	
+   var _portalId = "564890462"; // Portal On-premise Portal 
+   var _propId = "564990995"; 
+   var _ATM_TRACKING_ASSOCIATE_UTM = 0 ; // https://antsomi.com/ 
 (function() {
     var w = window;
     if (w.web_event) return;
@@ -33,7 +33,7 @@
     a.track = a;
     a.queue = [];
     var e = document.createElement("script");
-    e.type = "text/javascript", e.async = !0, e.src = "//sandbox-st-a.cdp.asia/insight.js";
+    e.type = "text/javascript", e.async = !0, e.src = "//st-a.cdp.asia/insight.js";
     var t = document.getElementsByTagName("script")[0];
     t.parentNode.insertBefore(e, t)
 })(); </script>
